--- a/web/src/page/blog/blog.module.css
+++ b/web/src/page/blog/blog.module.css
@@ -1,5 +1,9 @@
-.title{
-    color:red;
-    font-size: 20px;
+.title {
+  font-size: 20px;
+  font-weight: 600;
+}
 
+.content {
+  margin-top: 12px;
+  font-size: 1.6rem;
 }
