--- a/web/src/page/blog/blog.module.css
+++ b/web/src/page/blog/blog.module.css
@@ -5,21 +5,6 @@
 .blog {
 }
 
-.btn_open_form {
-  margin-bottom: 24px;
-}
-
-.form {
-  margin: 24px 0;
-  padding: 24px;
-  border: 1px solid blue;
-  border-radius: 4px;
-}
-
-.btn_close_form {
-  margin-right: 12px;
-}
-
 .post_content {
   text-align: justify;
   border-bottom: 1px solid #ccc;
@@ -35,6 +20,19 @@
 .content {
   margin-top: 12px;
   font-size: 1.6rem;
+}
+
+.post_info {
+  font-size: 1.5rem;
+  color: rgba(0, 0, 0, 0.6);
+  margin: 24px 0;
+  text-align: end;
+}
+
+.post_info_content {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .total_comment {
