--- a/web/src/page/blog/blog.module.css
+++ b/web/src/page/blog/blog.module.css
@@ -1,123 +1,46 @@
 .container {
-  width: 90%;
-}
-
-.blog {
-}
-
-.post_content {
-  text-align: justify;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 36px;
-}
-
-.title {
-  font-size: 20px;
-  font-weight: 600;
-  color: rgb(76, 1, 1);
-}
-
-.content {
-  margin-top: 12px;
-  font-size: 1.6rem;
-}
-
-.post_info {
-  font-size: 1.5rem;
-  color: rgba(0, 0, 0, 0.6);
-  margin: 24px 0;
-  text-align: end;
-}
-
-.post_info_content {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.total_comment {
-  margin-top: 8px;
-}
-
-.comment_form_block {
-  margin: 12px 0 24px;
-}
-
-.comment_form {
-  position: relative;
-  border-bottom: 1px solid #cccccc34;
-}
-
-.item_add_comment {
-}
-
-.input_add_comment {
-}
-
-.btn_add_comment {
-  transform: rotate(180deg);
-  background-color: transparent;
-  color: red;
-  outline: none;
-  position: absolute;
-  right: 26%;
-  top: 0;
-}
-
-.total_comment {
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.comment_item,
-.comment_sub_item {
-  display: flex;
-  margin-bottom: 12px;
-}
-
-.comment_sub_item {
-  margin-left: 36px;
   position: relative;
 }
 
-.comment_sub_item::before {
-  content: "";
-  display: block;
-  width: 16px;
-  height: 74px;
-  position: absolute;
-  top: -58px;
-  left: -20px;
-  z-index: 1;
-  border-bottom: 1.5px solid #ccc;
-  border-left: 1.5px solid #ccc;
-  border-bottom-left-radius: 6px;
+.table thead {
+  font-weight: 900;
+  font-family: sans-serif;
+  font-size: 1.4rem;
 }
 
-.comment_item_content {
-  margin-left: 8px;
-  /* border: 1px solid #ccc; */
-  padding: 6px 12px;
-  border-radius: 6px;
-  background-color: #cccccc34;
-}
-.comment_item_user {
-  font-weight: 700;
-  color: black;
-  font-size: 1.5rem;
-}
-.comment_item_title {
-  color: rgba(0, 0, 0, 0.5);
+.btn_add {
+  padding: 4px 14px;
+  background-color: rgb(0, 132, 255);
+  color: white;
+  font-size: 1.8rem;
+  border-radius: 4px;
+  margin-left: 3px;
 }
 
-.comment_item_action span {
-  margin: 4px 8px;
+.btn_delete_all_disabled,
+.btn_delete_all,
+.btn_action {
+  padding: 4px;
+  border: 1px solid #ddd;
+  margin: 3px;
+  border-radius: 3px;
+}
+
+.btn_delete_all {
   cursor: pointer;
 }
 
-.comment_item_action span:first-child {
-  color: rgba(0, 0, 255, 0.5);
+.btn_delete_all_disabled {
+  color: #ccc;
 }
 
-.comment_item_action span:last-child {
-  color: rgba(255, 0, 0, 0.5);
+.btn_delete_all:hover,
+.btn_action:hover {
+  color: rgb(0, 115, 255);
+}
+
+.selected_count {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
 }
