--- a/web/src/page/blog/blog.module.css
+++ b/web/src/page/blog/blog.module.css
@@ -1,5 +1,6 @@
 .container {
   position: relative;
+  padding-bottom: 64px;
 }
 
 .table thead {
@@ -17,6 +18,8 @@
   margin-left: 3px;
 }
 
+.pagination_item_fake,
+.pagination_item,
 .btn_delete_all_disabled,
 .btn_delete_all,
 .btn_action {
@@ -39,8 +42,41 @@
   color: rgb(0, 115, 255);
 }
 
+.pagination,
 .selected_count {
   position: absolute;
+}
+
+.selected_count {
   bottom: 20px;
   left: 0;
+}
+
+.pagination {
+  bottom: 28px;
+  right: 8%;
+  width: 5%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.pagination_item {
+  cursor: pointer;
+  transition: all linear 0.3s;
+}
+
+.pagination_item:hover {
+  background-color: rgb(0, 136, 255);
+  color: white;
+}
+
+.pagination_item_fake {
+  color: #ddd;
+}
+
+.pagination_cr_page {
+  padding: 4px;
+  margin: 3px 0;
+  border: 1px solid #eee;
+  color: #0095ff;
 }
